Wed Aug  6 08:49:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Connection/blocking/SPIPE-connector.cpp:
        * examples/OS/Process/imore.cpp:

Wed Aug  6 08:45:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/C++NPv2/AC_Client_Logging_Daemon.cpp:
        * examples/C++NPv2/Client_Logging_Daemon.cpp:
          Fixed gcc 4.3 warnings

Wed Aug  6 08:12:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
        * m4/ace.m4:
          Use more cached values, improved detection of tcl. Add bzip2
          support

Wed Aug  6 08:01:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACEXML/common/ZipCharStream.cpp:
          Fixed compile error in some builds

        * ACEXML/parser/parser/Parser.cpp:
          Check for the dtd file using a / and \ path specifier. This
          makes it possible to also use a / on windows to specify
          the path. This fixes bugzilla 3352

        * ACEXML/common/FileCharStream.h:
          Doxygen fix

        * ACEXML/common/FileCharStream.cpp:
          No need to check for a valid pointer before calling delete

Tue Aug  5 19:33:26  2008  Steve Huston  <shuston@riverace.com>

        * ace/Log_Msg.cpp: Fixed tab characters.

        * ace/config-posix.h: Only set ACE_HAS_POSIX_SEM_TIMEOUT if the
          _POSIX_TIMEOUTS feature test is not -1 (disabled). Fixes build
          on HP-UX 11iv3.

        * examples/APG/ThreadPools/LF_ThreadPool.cpp (elect_new_leader): Log
          the "Resiging and Electing" message at LM_DEBUG severity, not
          LM_ERROR. This is on APG page 342. Thanks to Julien Vintrou for
          pointing this out.

        * THANKS: Added Julien Vintrou.

Tue Aug  5 20:19:28 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/config-linux-common.h: Removed ACE_HAS_BROKEN_THREAD_KEYFREE.
          Reverts change from
          Thu Aug  9 13:39:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>